tests/tests/snapshots/test__java__java-export-raw.snap
---
source: tests/tests/java.rs
expression: "Java::default().export(&types(), IdentityFormat).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
// @generated by specta-java

public final class Bindings {
    private Bindings() {}

    public sealed interface Event<T> permits Event.Started, Event.Progress, Event.Finished {
        record Started<T>() implements Event<T> {}

        record Progress<T>(
            java.lang.Short field0
        ) implements Event<T> {}

        record Finished<T>(
            T result
        ) implements Event<T> {}
    }

    public record Model(
        Response<java.lang.String> response,
        Status status,
        Event<java.lang.String> event,
        java.util.Map<java.lang.String, java.lang.Long> lookup,
        Tuple tuple
    ) {
        public record Tuple(
            java.lang.String field0,
            java.lang.Boolean field1
        ) {}
    }

    /**
     * A documented generic response.
     */
    public record Response<T>(
        /**
         * Returned payload.
         */
        T value,
        java.lang.Long optional_count,
        java.util.List<java.lang.String> labels
    ) {}

    public enum Status {
        Ready,
        PendingReview
    }
}
