tests/tests/snapshots/test__java__java-export-serde-phases.snap
---
source: tests/tests/java.rs
expression: "Java::default().export(&types(), specta_serde::PhasesFormat).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
// @generated by specta-java

public final class Bindings {
    private Bindings() {}

    public sealed interface Event<T> permits Event.Started, Event.Progress, Event.Finished {
        record Started<T>(
            String kind
        ) implements Event<T> {}

        record Progress<T>(
            String kind,
            Short payload
        ) implements Event<T> {}

        record Finished<T>(
            String kind,
            Payload<T> payload
        ) implements Event<T> {
            public record Payload<T>(
                T result
            ) {}
        }
    }

    public record Model(
        Response<String> response,
        Status status,
        Event<String> event,
        java.util.Map<String, Long> lookup,
        Tuple tuple
    ) {
        public record Tuple(
            String field0,
            Boolean field1
        ) {}
    }

    /**
     * A documented generic response.
     */
    public record Response<T>(
        /**
         * Returned payload.
         */
        T value,
        Long optional_count,
        java.util.List<String> labels
    ) {}

    public enum Status {
        ready("ready"),
        pending_review("pending_review");

        private final String value;

        Status(String value) {
            this.value = value;
        }

        public String value() {
            return value;
        }
    }
}
