tests/tests/snapshots/test__java__java-export-serde.snap
---
source: tests/tests/java.rs
expression: "Java::default().export(&types(), specta_serde::Format).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
// @generated by specta-java

public final class Bindings {
    private Bindings() {}

    public sealed interface Event<T> permits Event.Started, Event.Progress, Event.Finished {
        record Started<T>(
            java.lang.String kind
        ) implements Event<T> {}

        record Progress<T>(
            java.lang.String kind,
            java.lang.Short payload
        ) implements Event<T> {}

        record Finished<T>(
            java.lang.String kind,
            Payload<T> payload
        ) implements Event<T> {
            public record Payload<T>(
                T result
            ) {}
        }
    }

    public record Model(
        Response<java.lang.String> response,
        Status status,
        Event<java.lang.String> event,
        java.util.Map<java.lang.String, java.lang.Long> lookup,
        Tuple tuple
    ) {
        public record Tuple(
            java.lang.String field0,
            java.lang.Boolean field1
        ) {}
    }

    /**
     * A documented generic response.
     */
    public record Response<T>(
        /**
         * Returned payload.
         */
        T value,
        java.lang.Long optional_count,
        java.util.List<java.lang.String> labels
    ) {}

    public enum Status {
        ready("ready"),
        pending_review("pending_review");

        private final java.lang.String value;

        Status(java.lang.String value) {
            this.value = value;
        }

        public java.lang.String value() {
            return value;
        }
    }
}
